# jessibuca

./: .babelrc  .eslintignore  .eslintrc  .gitignore  .gitmodules  .project  AMF.h  AudioDecoder.h  FlvClient.cpp  FlvDecoder.h  H5LiveClient.cpp  H5LiveClient.js  Jessibuca.cpp  Jessibuca.js  Jessibuca.sln  Jessibuca.vcxproj  Jessibuca.vcxproj.filters  MemoryStream.h  MonaClient.cpp  MonaClient.h  MonaWebSocketClient.vcxproj  MonaWebSocketClient.vcxproj.filters  NetConnection.h  NetStream.h  README.en.md  README.md  RtmpLLVM.bc  RtmpLLVM.cpp  RtmpLLVM.h  VideoDecoder.h  api.md  avc.bc  base.h  broadway.h  build.sh  buildFlv.py  build_decoder.sh  cocos.js  cocosCom.js  ffmpeg.h  (+23 more)
.github/workflows/: main.yml
.vitepress/theme/: index.js
.vuepress/: config.toml
.vuepress/components/: DemoPlayer.vue  DemoPlayer2.vue  renderer-new.js  renderer.js  renderer2.js  renderer3.js  rendererV2.js
.vuepress/public/: ff.js  ff.wasm  ff1_wasm.js  ff1_wasm.wasm  ff_wasm.js  ff_wasm.wasm  ff_wasm.worker.js  libhevc_aac.js  libhevc_aac_wasm.js  libhevc_aac_wasm.wasm  webgl.js  worker.js
Broadway/: H264SwDecApi.h  WebGLCanvas.js  h264bsd_cavlc.c  h264bsd_conceal.c  h264bsd_decoder.c  h264bsd_util.h  make.py
CppTest/: CppTest.cpp  CppTest.vcxproj  CppTest.vcxproj.filters
aacDecoder/: MonaClient.bc  UpgradeLog2.htm  decoder.c  drm_dec.c  libfaad.VC.db  libfaad.sln  libfaad.vcxproj  libfaad.vcxproj.filters  libfaad2_dll.VC.db  libfaad2_dll.vcxproj.filters  make.py  mp4.c
components/: DemoPlayer.vue  renderer.js
d.ts/: jessibuca.d.ts
demo/: api.md  components.d.ts  demo.md  document-demo-1.md  document.md  index.html  index.md  monibuca.com.key  monibuca.com.pem  package-lock.json  package.json  player-pro-vod.md  player-pro.md  player.md  pro-ai.md  pro-demo.md  pro-doc.md  pro-module.md  pro-more.md  pro-playback.md  pro-upgrade.md  pro-vod.md  pro-webrtc.md  pro.md  talk-doc.md  test-url.md  tsconfig.json  vite.config.js  vite.config.ts
demo/.vitepress/: config.js
demo/components/: DemoPlayer.vue  ProDemoPlayer.vue  Rice.vue  renderer.js  version.js
demo/public/: 2x2-demo.html  3x3-demo.html  MSE-2x2-demo.html  MSE-3x3-demo.html  MSE-demo.html  auto-demo.html  danmu-demo.html  decoder.js  decoder.js.map  decoder.wasm  demo-2.html  demo.html  ff.js  ff.wasm  ff_wasm.worker.js  index.js  index.js.map  jessibuca.d.ts  jessibuca.js  jessibuca.js.map  loop-demo.html  mobile-danmu-demo.html  mobile-demo.html  mobile-fullscreen.html  vconsole.js  webTransport-demo.html  webcodecs-2x2-demo.html  webcodecs-3x3-demo.html  webcodecs-canvas-demo.html  (+7 more)
jessibuca/: build.sh  package.json
js/: FlvClient.html  FlvClient.js  FlvClient.js.symbols  FlvClient.wasm  FlvMain.js  MonaClient.js  MonaClient.wasm  MonaMain.js  RtmpLLVM.js  WebGLCanvas.js  flv.html  index - 副本.html  index.html  index2.html  nzp459D.tmp  testClient.swf  web.config
libde265/: .travis.yml  CMakeLists.txt  COPYING  alloc_pool.h  appveyor.yml  bitstream.h  config.h  configparam.cc  configparam.h  configure.ac  contextmodel.cc  de265-version.h  de265-version.h.in  de265.cc  deblock.cc  decctx.cc  decctx.h  dpb.cc  dpb.h  en265.h  fallback-dct.cc  fallback-motion.cc  image-io.cc  image-io.h  image.cc  image.h  intrapred.cc  intrapred.h  make.py  motion.cc  motion.h  nal-parser.cc  nal.h  pps.cc  pps.h  quality.cc  refpic.cc  sao.cc  sei.cc  slice.cc  (+13 more)
libde265/acceleration-speed/: Makefile.am  acceleration-speed.cc  dct-scalar.cc  dct-scalar.h  dct.cc  dct.h
libde265/dec265/: CMakeLists.txt  Makefile.vc7  cmake_install.cmake  dec265.cc  hdrcopy.cc  sdl.cc  sdl.hh
libde265/enc265/: CMakeLists.txt  Makefile.am  cmake_install.cmake
libde265/encoder/: CMakeLists.txt  Makefile.am  Makefile.in  analyze.cc  analyze.h  encode.cc  encode.h  encoder-context.cc  encoder-context.h  encoder-params.cc  encoder-params.h  sop.cc
libde265/encoder/algo/: CMakeLists.txt  Makefile.am  Makefile.in  algo.cc  algo.h  cb-interpartmode.cc  cb-interpartmode.h  cb-intra-inter.cc  cb-intra-inter.h  cb-intrapartmode.cc  cb-intrapartmode.h  cb-mergeindex.cc  cb-mergeindex.h  cb-skip.cc  cb-skip.h  cb-split.cc  cb-split.h  coding-options.cc  coding-options.h  ctb-qscale.cc  ctb-qscale.h  pb-mv.cc  pb-mv.h  tb-intrapredmode.cc  tb-intrapredmode.h  tb-split.cc  tb-split.h
libde265/extra/: stdbool.h
libde265/libde265/: Makefile.am  Makefile.vc7  cabac.h  cmake_install.cmake  contextmodel.cc  decctx.cc  dpb.h  image-io.h  image.cc  pps.cc  pps.h  sao.cc  slice.cc  sps.cc  sps.h  threads.h  transform.cc  util.h  vps.h
libde265/libde265/arm/: arm.cc  arm.h  cpudetect.S  hevcdsp_qpel_neon.S
libde265/libde265/encoder/: Makefile.am  encoder-context.h  encoder-core.cc  encoder-types.cc  sop.h
libde265/libde265/encoder/algo/: CMakeLists.txt  Makefile.am  cmake_install.cmake  coding-options.cc
libde265/libde265/x86/: Makefile.am
libde265/scripts/: check_licenses.sh  decodestreams.py
libde265/sherlock265/: README  VideoDecoder.cc  VideoDecoder.hh  VideoWidget.cc  VideoWidget.hh
libde265/tools/: Makefile.am  bjoentegaard.cc  gen-entropy-table.cc  rd-curves.cc  yuv-distortion.cc
libhevc/: NOTICE  OWNERS  cfi_blacklist.txt  make.py
libid3tag/: make.py
libmad/: frame.c  frame.h  layer3.c  make.py
liveflv/: index.html
public/: 264_aac.js  264_aac_wasm.js  264_aac_wasm.wasm  264_mp3.js  264_mp3_wasm.js  264_mp3_wasm.wasm  H5LiveClient.js  H5LiveClient.wasm  H5LiveClient.worker.js  Jessibuca.js  ajax.js  audioWorklet.js  avc.js  cocos.js  ff.js  ff.wasm  ff_aac.html  ff_aac.js  ff_aac_wasm.js  ff_aac_wasm.wasm  ff_mp3.html  ff_mp3.js  ff_mp3_wasm.js  ff_mp3_wasm.wasm  ff_wasm.js  ff_wasm.wasm  flash.html  hevc.js  hevc_aac.html  hevc_aac.js  hevc_mp3.js  index.html  libde265_aac.js  libde265_mp3.js  live_test.swf  renderer.js  worker.js
scripts/: ff_aac.bat
speex-1.2rc2/: INSTALL  Makefile  config.h  configure  libtool  make.py  speex.pc
src/: capability.ts  index.js  index.ts  jessibuca.js  post.js  rx.ts  worker.js
types/: index.d.ts  report.d.ts  stream.d.ts  webcodecs.d.ts  webtransport.d.ts
wasm/: decoder.cpp  make.py  pre.js
(+587 files in other folders)
