noinst_LTLIBRARIES = libde265_encoder_algo.la

libde265_encoder_algo_la_CXXFLAGS = -I../..
libde265_encoder_algo_la_SOURCES = \
  algo.h algo.cc \
  coding-options.h coding-options.cc \
  ctb-qscale.h ctb-qscale.cc \
  cb-split.h cb-split.cc \
  cb-intrapartmode.h cb-intrapartmode.cc \
  cb-interpartmode.h cb-interpartmode.cc \
  cb-skip.h cb-skip.cc \
  cb-intra-inter.h cb-intra-inter.cc \
  cb-mergeindex.h cb-mergeindex.cc \
  tb-split.h tb-split.cc \
  tb-transform.h tb-transform.cc \
  tb-intrapredmode.h tb-intrapredmode.cc \
  tb-rateestim.h tb-rateestim.cc \
  pb-mv.h pb-mv.cc

EXTRA_DIST = \
  CMakeLists.txt
